Providing some blime...

--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 <br>
 [blim-i-tee]<br>
 .noun.<br>
-1. the state or quality of being <a href="https://blime.eu">blime.</a><br>
+1. the state or quality of being <a href="https://blime.eu">blime</a>.<br>
 2. a <a href="https://blime.eu">blime</a> person or thing.<br>
